src/assets/scss/custom.scss
$primary-color:#f8d100;
$primary-color-hover:#d1ab00;
$primary-color-dark:#333333;

$secondary-font:'Ubuntu', "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;

.button{
  background-color:$primary-color;
  color:#333333;
  font-weight:bold;

  &:hover, &:focus, &:hover, &:focus{
    background-color:$primary-color-hover;
    color:#333333;
  }
}
#back:hover{
  color:$primary-color;
}
a{
  color:$primary-color;
}
a:hover, a:focus{
  color:$primary-color-hover;
}
.desc{
  background-color:$primary-color;
}
.logo{
  cursor:pointer;

  .logo-image{
    background-color:#333333;
  }
}
#blog .header {
  background-color: #ebebeb;
}
#work .header {
  background-color: #dddddd;
}
.box .header{
  background-color:#f9f9f9;

  &:hover{
    background-color:#333333 !important;
  }

  .img2{
    display:none;
  }
  .img1{
    display:block;
  }
  &:hover .img1{
    display:none;
  }
  &:hover .img2{
    display:block;
  }
}
.box.active .header{
  &:hover{
    background-color:#f9f9f9 !important;
  }

  .img1{
    display:block;
  }
  .img2{
    display:none;
  }
}
#contact{
  z-index:100;

  .contact-details ul li a:hover{
    color:$primary-color;
  }
  #contact_form{
    #thanks{
      color:$primary-color;
    }
    input[name='name']{
      margin-top:0;
    }
  }
  h2, #contact h4, #contact input{
    font-family:$secondary-font;
  }
  h2 a{
    font-weight:300;

    &:hover{
      color:$primary-color;
    }
  }
}
#info{
  width:100%;
  height:100%;
  position:fixed;
  top:0;
  left:0;
  background-color:#000000;
  opacity:0.85;
  z-index:200;
  filter:alpha(opacity=85);

  #close{
    float:right;
  }
  #close img{
    width:80px;
    margin:20px;
  }
  .full_logo{
    height:400px;
    clear:both;
    display:block;
    margin:auto;
  }
  .social{
    display:block;
    margin:auto;
    width:195px;

    ul li{
      margin-top:2.375rem;
      margin-left:0.250rem;
    }
    ul li .fa{
      color:#333333;
    }
    ul li a:hover .fa{
      color:$primary-color;
    }
    ul li .fa.fa-circle, ul li a:hover .fa.fa-circle{
      color:#ffffff;
    }
    ul li .fa-stack{
      line-height:2.1em;
    }
  }

  @media all and (max-width:1024px) {
    #close img{
      width:30px;
    }
    .full_logo{
      height:300px;
    }
  }
}
.section-title{
  margin-bottom:0px;

  h2{
    font-weight:bold;
    font-size:20px;
    position:relative;
    z-index:1;
    width:100%;
  }
  h2:before{
    border-top:1px solid #dddddd;
    content:"";
    margin:0 auto;
    position:absolute;
    top:50%; left:0; right:0; bottom:0;
    width:95%;
    z-index:-1;
  }
  h2 span{
    background:#ffffff;
    padding:0 15px;
    Text-align:Center;
  }
}
.section-intro{
  font-size:22px;
  margin:0 30px;
  text-align:center;
  font-family:$secondary-font;
  font-weight:100;
  line-height:32px;
}
.icon-text-diamond{
  &:hover .wrapper .content i{
    color:$primary-color;
  }

  .content{
    background:$primary-color;
  }
  .wrapper .content i{
    color:#ffffff;
    font-size:36px;
    width:36px;
    height:36px;
  }
  p{
    font-family:$secondary-font;
    font-weight:100;
    font-size:17px;
    line-height:22px;
  }
}
.testimonials{
  .quote{
    background:$primary-color;
  }
  .quote::after{
    border:20px solid transparent; border-left-color:$primary-color;
  }
  .slick-dots .slick-active button:before{
    color:$primary-color;
  }
}
.member ul li a:hover{
  color:$primary-color;
}
.post h3 a:hover{
  color:$primary-color;
}
.technology{
  position:relative;

  &:hover img.colored{
    display:block;
  }

  img.colored{
    display:none;
    position:absolute;
    top:0;
  }
}
#service .desc.invisible{
  padding:100px 10% 40px 80px;
}
.client{
  text-align:center;
  width:300px;
  margin:0 auto 30px;
  position:relative;

  &:hover img.colored{
    display:block;
  }

  img.colored{
    display:none;
    position:absolute;
    top:0;
  }
}
.main-services{
  .columns .icon-text:hover{
    background-size:cover;
    color: #222222;
  }

  .columns:nth-child(1) .icon-text:hover{
    background:url(../images/service1.jpg) center center no-repeat;
  }
  .columns:nth-child(2) .icon-text:hover{
    background:url(../images/service2.jpg) center center no-repeat;
  }
  .columns:nth-child(3) .icon-text:hover{
    background:url(../images/service3.jpg) center center no-repeat;
  }
  .columns:nth-child(4) .icon-text:hover{
    background:url(../images/service4.jpg) center center no-repeat;
  }
  .columns:nth-child(5) .icon-text:hover{
    background:url(../images/service5.jpg) center center no-repeat;
  }
  .columns:nth-child(6) .icon-text:hover{
    background:url(../images/service6.jpg) center center no-repeat;
  }

  .columns:nth-child(4) .icon-text p{
    margin-bottom: 1rem;
  }
}

